--- a/Tests/ArchiToolkit.Console/ArchiToolkit.Console.csproj
+++ b/Tests/ArchiToolkit.Console/ArchiToolkit.Console.csproj
@@ -12,6 +12,7 @@
         <ProjectReference Include="..\..\src\analyzers\ArchiToolkit.InterpolatedParser.SourceGenerator\ArchiToolkit.InterpolatedParser.SourceGenerator.csproj" OutputItemType="analyzer"/>
         <ProjectReference Include="..\..\src\analyzers\ArchiToolkit.PureConst.Analyzer\ArchiToolkit.PureConst.Analyzer.csproj" OutputItemType="analyzer"/>
         <ProjectReference Include="..\..\src\analyzers\ArchiToolkit.ValidResults.SourceGenerator\ArchiToolkit.ValidResults.SourceGenerator.csproj" OutputItemType="analyzer"/>
+        <ProjectReference Include="..\..\src\analyzers\ArchiToolkit.QuantExtensions.SourceGenerator\ArchiToolkit.QuantExtensions.SourceGenerator.csproj" OutputItemType="analyzer"/>
         <ProjectReference Include="..\..\src\libraries\ArchiToolkit.Assertions.FluentValidation\ArchiToolkit.Assertions.FluentValidation.csproj"/>
         <ProjectReference Include="..\..\src\libraries\ArchiToolkit.CppInteropGen\ArchiToolkit.CppInteropGen.csproj"/>
         <ProjectReference Include="..\..\src\libraries\ArchiToolkit.Fluent\ArchiToolkit.Fluent.csproj"/>
@@ -20,6 +21,7 @@
         <ProjectReference Include="..\..\src\libraries\ArchiToolkit.Assertions.Logging\ArchiToolkit.Assertions.Logging.csproj"/>
         <ProjectReference Include="..\..\src\libraries\ArchiToolkit.InterpolatedParser\ArchiToolkit.InterpolatedParser.csproj"/>
         <ProjectReference Include="..\..\src\libraries\ArchiToolkit.ValidResults\ArchiToolkit.ValidResults.csproj"/>
+        <ProjectReference Include="..\..\src\libraries\ArchiToolkit.QuantExtensions\ArchiToolkit.QuantExtensions.csproj"/>
     </ItemGroup>
 
     <ItemGroup>
